# SampleGenerators

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  install_discode.sh
src/: CMakeLists.txt  SampleGeneratorsConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/CvMatGenerator/: CMakeLists.txt  CvMatGenerator.cpp  CvMatGenerator.hpp
src/Components/CvMatSink/: CMakeLists.txt  CvMatSink.cpp  CvMatSink.hpp
src/Components/ImageLoader/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.hpp
src/Components/SampleGenerator/: CMakeLists.txt  SampleGenerator.cpp  SampleGenerator.hpp
src/Types/: CMakeLists.txt
tasks/: SequenceViewer.xml  SumTest.xml
test/: CMakeLists.txt  CvMatGeneratorTest.cpp  CvMatSinkTest.cpp  ImageLoaderTest.cpp  SampleGeneratorTest.cpp
