INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

function(create_test name src libs)
  add_executable(${name} ${src})
  target_link_libraries(${name} ${GMOCK_LIBRARIES} ${GMOCK_MAIN_LIBRARIES} ${libs})
  add_dependencies(${name} gmock)
  if(CMAKE_COMPILER_IS_GNUC OR CMAKE_COMPILER_IS_GNUCXX)
    target_link_libraries(${name} pthread)
  endif(CMAKE_COMPILER_IS_GNUC OR CMAKE_COMPILER_IS_GNUCXX)
  install(TARGETS ${name} DESTINATION ${CMAKE_INSTALL_PREFIX})
  add_test(${name} ${name})
endfunction(create_test)

set(IMAGE_LOADER_SRC ImageLoaderTest.cpp)
set(IMAGE_LOADER_LIB ImageLoader)
create_test(ImageLoaderTest ${IMAGE_LOADER_SRC} "${IMAGE_LOADER_LIB}")
file(COPY first.testfile DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY first.testfile DESTINATION ${CMAKE_BINARY_DIR}/Debug)
file(COPY second.testfile DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY second.testfile DESTINATION ${CMAKE_BINARY_DIR}/Debug)
file(COPY ../data/43074.jpg DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ../data/43074.jpg DESTINATION ${CMAKE_BINARY_DIR}/Debug)
